# hiop

./: .clang-format  .gitlab-ci.yml  BUILD.sh  CMakeLists.txt  README.md  README_developers.md  build.sh
minimal_error/: .CMakeLists.txt.swp  .timesMatTransError.cpp.swp  CMakeLists.txt  timesMatTransError.cpp
src/Drivers/: CMakeLists.txt
src/Interface/: CMakeLists.txt  hiop_defs.hpp
src/LinAlg/: CMakeLists.txt  hiopLinSolver.hpp  hiopLinSolverIndefDenseMagma.hpp  hiopMatrix.cpp  hiopMatrix.hpp  hiopMatrixComplexDense.hpp  hiopMatrixComplexSparseTriplet.hpp  hiopMatrixDenseRowMajor.cpp  hiopMatrixRajaDense.cpp  hiopMatrixRajaDense.hpp  hiopMatrixRajaSparseTriplet.cpp  hiopMatrixRajaSparseTriplet.hpp  hiopMatrixSparseTriplet.cpp  hiopMatrixSparseTriplet.hpp  hiopVector.hpp  hiopVectorPar.cpp  hiopVectorPar.hpp  hiopVectorRajaPar.cpp  hiopVectorRajaPar.hpp
src/Optimization/: CMakeLists.txt  hiopDualsUpdater.cpp  hiopHessianLowRank.cpp  hiopIterate.cpp  hiopKKTLinSys.cpp  hiopKKTLinSys.hpp  hiopKKTLinSysDense.hpp  hiopKKTLinSysMDS.cpp  hiopNlpFormulation.cpp  hiopNlpFormulation.hpp  hiopNlpTransforms.cpp  hiopNlpTransforms.hpp
tests/: CMakeLists.txt  fullBuildMatrix.sh  testMatrix.cpp  testMatrixRajaSparse.cpp  testMatrixSparse.cpp  testVector.cpp
tests/LinAlg/: matrixTests.hpp  matrixTestsComplexDense.cpp  matrixTestsComplexDense.hpp  matrixTestsDense.cpp  matrixTestsDense.hpp  matrixTestsRajaDense.cpp  matrixTestsRajaDense.hpp  matrixTestsRajaSparseTriplet.cpp  matrixTestsRajaSparseTriplet.hpp  matrixTestsSparse.hpp  matrixTestsSparseTriplet.cpp  matrixTestsSparseTriplet.hpp  testBase.hpp  vectorTests.hpp  vectorTestsPar.cpp  vectorTestsPar.hpp  vectorTestsRajaPar.cpp  vectorTestsRajaPar.hpp
